--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "node -r ts-node/register bin/test.ts",
-    "test:coverage": "c8 node -r ts-node/register bin/test.ts",
+    "test:coverage": "c8 node -r ts-node/register bin/testAll.ts",
     "test:all": "node -r ts-node/register bin/testAll.ts",
-    "test:all:coverage": "c8 node -r ts-node/register bin/testAll.ts",
     "build": "npx tsc && rm -rf dist/bin && rm -rf dist/tests",
     "watch": "npx tsc -w && rm -rf dist/bin && rm -rf dist/tests",
     "make-docs": "npx typedoc",
@@ -49,11 +48,12 @@
     "@types/uuid": "^9.0.1",
     "adonis-preset-ts": "^2.1.0",
     "c8": "^7.13.0",
+    "dotenv": "^16.0.3",
+    "dotenv-expand": "^10.0.0",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-adonis": "^2.1.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "node-docker-api": "^1.1.22",
     "prettier": "^2.8.7",
     "ts-node": "^10.9.1",
     "typedoc": "^0.24.1",
@@ -89,6 +89,7 @@
   "dependencies": {
     "@poppinss/utils": "^5.0.0",
     "amqplib": "^0.10.3",
+    "async-mqtt": "^2.6.3",
     "indicative": "^5.0.8",
     "ioredis": "^5.3.1",
     "knex": "^2.4.2",
