--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test:all": "node -r ts-node/register bin/testAll.ts",
     "build": "npx tsc && rm -rf dist/bin && rm -rf dist/tests",
     "watch": "npx tsc -w && rm -rf dist/bin && rm -rf dist/tests",
-    "make-docs": "npx typedoc",
-    "make-docs:watch": "npx typedoc --watch",
+    "docs": "npx typedoc",
+    "docs:watch": "npx typedoc --watch",
     "lint": "eslint . --ext=.ts",
     "format": "prettier --write ."
   },
@@ -57,6 +57,7 @@
     "prettier": "^2.8.7",
     "ts-node": "^10.9.1",
     "typedoc": "^0.24.1",
+    "typedoc-plugin-coverage": "^2.1.0",
     "typescript": "^5.0.4"
   },
   "eslintConfig": {
