--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "docs": "npx typedoc",
     "docs:watch": "npx typedoc --watch",
     "lint": "eslint . --ext=.ts",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "lite:serve": "node -r ts-node/register bin/liteServe.ts"
   },
   "keywords": [
     "rabbitmq",
@@ -93,6 +94,7 @@
     "async-mqtt": "^2.6.3",
     "indicative": "^5.0.8",
     "ioredis": "^5.3.1",
+    "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
     "lodash.merge": "^4.6.2",
     "luxon": "^3.3.0",
@@ -104,6 +106,8 @@
     "pg": "^8.10.0",
     "pino": "^8.11.0",
     "pino-pretty": "^10.0.0",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "sqlite3": "^5.1.6",
     "tedious": "^15.1.3",
     "tmp-cache": "^1.1.0",
