Lite Coordination Server

--- a/tests/.env
+++ b/tests/.env
@@ -20,4 +20,9 @@ MYSQL_DATABASE=rmqbq
 MQTT_PORT=11883
 
 # Lite Server Configuration
+LITE_KEY=someveryimportantsecret
 LITE_PORT=6365
+LITE_PATH=/rmqbqc/
+LITE_HOST=localhost
+LITE_PROTOCOL=http
+LITE_ALLOW_INSECURE=false
